--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:textSize="15dp"
             android:text="Version 1.1"
+            android:visibility="gone"
             android:textColor="@color/colorPrimaryDark"
             android:layout_alignParentRight="true"
             android:layout_margin="10dp"
