--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -140,26 +140,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
-
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/whatsapp_share"
+                    android:gravity="center"
                     android:orientation="vertical"
 
                     >
 
                 <ImageView
-                    android:id="@+id/whatsapp_share"
-                    android:layout_width="50px"
-                    android:layout_height="50px"
-                    android:layout_gravity="center"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:src="@drawable/whatsapp_icons"
                     android:scaleType="centerCrop"
 
@@ -171,21 +168,19 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-
+                    android:id="@+id/like_ll"
                     android:orientation="vertical"
-
                     >
 
                     <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/likes_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
                         android:layout_gravity="center"
-                        android:src="@drawable/non_like"
                         android:scaleType="centerCrop"
+                        android:src="@drawable/non_like"
 
                         />
 
@@ -195,9 +190,8 @@
                         android:layout_height="wrap_content"
                         android:text="0"
                         android:gravity="center"
-
                         android:textColor="@color/black"
-                        android:textSize="12dp"
+                        android:textSize="12sp"
                         android:layout_gravity="center"
                         />
 
@@ -207,7 +201,6 @@
                         android:layout_height="wrap_content"
                         android:visibility="gone"
                         android:gravity="center"
-
                         android:textColor="@color/black"
                         android:textSize="12dp"
                         android:layout_gravity="center"
@@ -217,18 +210,16 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:id="@+id/disLike_ll"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-
                     android:orientation="vertical"
-
                     >
 
                     <ImageView
+                        android:layout_width="20dp"
                         android:id="@+id/unlikes_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="2dp"
                         android:src="@drawable/unlike_icons"
@@ -244,7 +235,7 @@
                         android:gravity="center"
 
                         android:textColor="@color/black"
-                        android:textSize="12dp"
+                        android:textSize="12sp"
                         android:layout_gravity="center"
                         />
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
@@ -262,16 +253,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:id="@+id/comment_ll"
+                    android:gravity="center"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
+                        android:layout_width="20dp"
                         android:id="@+id/comments_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/comments_iconed"
                         android:scaleType="centerCrop"
@@ -285,7 +277,7 @@
                         android:text="0"
                         android:gravity="center"
                         android:textColor="@color/black"
-                        android:textSize="12dp"
+                        android:textSize="12sp"
                         android:layout_gravity="center"
                         />
                 </LinearLayout>
@@ -303,18 +295,17 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/download_screen"
+                    android:gravity="center"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
-                        android:id="@+id/download_screen"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
-                        android:layout_gravity="center"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/download"
                         android:scaleType="centerCrop"
 
@@ -325,21 +316,20 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:gravity="center"
+                    android:id="@+id/share_image"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
-                        android:id="@+id/share_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/share_icons"
                         android:scaleType="centerCrop"
-
                         />
 
 
@@ -367,6 +357,7 @@
                     <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
                         android:id="@+id/content_title"
                         android:layout_width="match_parent"
+                        android:visibility="gone"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
                         android:textColor="@color/black"
