--- a/app/src/main/res/layout/activity_tab_search2.xml
+++ b/app/src/main/res/layout/activity_tab_search2.xml
@@ -115,6 +115,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
+                android:visibility="gone"
                 android:id="@+id/progressBar_catg"
                 android:layout_centerInParent="true"/>
 
