--- a/app/src/main/res/layout/activity_post_video_youtube_content.xml
+++ b/app/src/main/res/layout/activity_post_video_youtube_content.xml
@@ -241,6 +241,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatTextView
@@ -282,6 +283,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tag_layout"
+            android:visibility="gone"
             android:orientation="vertical">
 
             <android.support.v7.widget.AppCompatTextView
