--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -85,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:text="Follow"
+                    android:visibility="gone"
                     android:layout_marginRight="20dp"
                     android:textStyle="bold"
                     android:layout_gravity="center_vertical"
@@ -107,7 +108,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:id="@+id/content_detail"
                 >
@@ -117,7 +118,7 @@
                     android:id="@+id/content_image"
                     android:layout_width="match_parent"
 
-                    android:layout_height="200dp"
+                    android:layout_height="300dp"
                     android:src="@drawable/no_image"
                     android:scaleType="fitXY"
                     app:riv_corner_radius="3dip"
