--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -129,20 +129,20 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:id="@+id/whatsapp_share"
+                    android:gravity="center"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
-                        android:id="@+id/whatsapp_share"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/whatsapp_icons"
                         android:scaleType="centerCrop"
+                        android:src="@drawable/whatsapp_icons"
 
                         />
 
@@ -150,20 +150,19 @@
                 </LinearLayout>
 
                 <LinearLayout
-
+                    android:gravity="center"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:id="@+id/like_ll_cds"
                     android:layout_weight="1"
-
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/likes_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/non_like"
                         android:scaleType="centerCrop"
@@ -198,18 +197,18 @@
                 <LinearLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:layout_weight="1"
-
+                    android:id="@+id/dislike_ll_cds"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/unlikes_image"
-                        android:layout_width="40px"
-                        android:layout_height="40px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="2dp"
                         android:src="@drawable/unlike_icons"
@@ -244,8 +243,9 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:id="@+id/comment_ll_cds"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
@@ -253,8 +253,8 @@
 
                     <ImageView
                         android:id="@+id/comments_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/comments_iconed"
                         android:scaleType="centerCrop"
@@ -298,17 +298,17 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:id="@+id/share_image"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
-                        android:id="@+id/share_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/share_icons"
                         android:scaleType="centerCrop"
