influencer pgm detail screen

--- a/app/src/main/res/layout/activity_content_image_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_image_detail_screen.xml
@@ -91,6 +91,7 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
+                android:id="@+id/content_detail_like_enabler"
                 android:layout_height="wrap_content">
 
                 <com.makeramen.roundedimageview.RoundedImageView
