--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -132,19 +132,18 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-
+                    android:id="@+id/whatsapp_share"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:layout_weight="1"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
-                        android:id="@+id/whatsapp_share"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/whatsapp_icons"
                         android:scaleType="centerCrop"
@@ -155,20 +154,19 @@
                 </LinearLayout>
 
                 <LinearLayout
-
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:id="@+id/like_ll_cds"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:layout_weight="1"
-
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/likes_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/non_like"
                         android:scaleType="centerCrop"
@@ -201,20 +199,19 @@
                 </LinearLayout>
 
                 <LinearLayout
-
+                    android:id="@+id/dislike_ll_cds"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:layout_weight="1"
-
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/unlikes_image"
-                        android:layout_width="40px"
-                        android:layout_height="40px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:layout_marginTop="2dp"
                         android:src="@drawable/unlike_icons"
@@ -249,17 +246,18 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:gravity="center"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/comment_ll_cds"
                     android:orientation="vertical"
 
                     >
 
                     <ImageView
                         android:id="@+id/comments_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/comments_iconed"
                         android:scaleType="centerCrop"
@@ -303,17 +301,17 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:id="@+id/share_image"
 
                     >
 
                     <ImageView
-                        android:id="@+id/share_image"
-                        android:layout_width="50px"
-                        android:layout_height="50px"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/share_icons"
                         android:scaleType="centerCrop"
