--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -19,20 +19,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:text="Version 1.1"
-            android:visibility="gone"
-            android:textColor="@color/colorPrimaryDark"
             android:layout_alignParentRight="true"
             android:layout_margin="10dp"
-            android:id="@+id/version_name" />
+            android:text="Version 1.1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/copyrights_by"
@@ -41,17 +40,30 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
-            android:layout_marginBottom="12dp"
             android:text="Mera Bihar"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="30dp"
-            android:textStyle="normal"
-            >
+            android:textStyle="normal">
 
         </TextView>
 
+        <TextView
 
+            android:id="@+id/version_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            android:text="Version 1.1"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:textStyle="normal">
+
+        </TextView>
 
 
     </RelativeLayout>
