--- a/app/src/main/res/layout/fragment_for_you_new.xml
+++ b/app/src/main/res/layout/fragment_for_you_new.xml
@@ -1,11 +1,14 @@
-<android.support.design.widget.CoordinatorLayout
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/follow_for_u_new"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
+<!--
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +17,7 @@
     android:layout_height="match_parent"
     android:id="@+id/pullToRefresh"
     tools:context="tv.merabihar.app.merabihar.UI.MainTabHostScreens.HomeFragments.ForYouNewFragment">
+-->
 
 
     <FrameLayout
@@ -35,7 +39,7 @@
 
     </FrameLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+<!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
