--- a/app/src/main/res/layout/activity_content_detail_screen.xml
+++ b/app/src/main/res/layout/activity_content_detail_screen.xml
@@ -326,7 +326,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="12sp"
+                android:layout_marginLeft="12sp"
+                android:layout_marginRight="12sp"
                 android:orientation="vertical">
 
 
@@ -335,6 +336,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#a0a0a0"
+                    android:visibility="gone"
                     android:textSize="14sp"
                     android:id="@+id/subcategory_of_content"
                     android:text=""/>
