--- a/app/src/main/res/layout/activity_tab_search2.xml
+++ b/app/src/main/res/layout/activity_tab_search2.xml
@@ -16,35 +16,58 @@
         android:focusableInTouchMode="true"
         android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/linear"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="bottom"
-            android:layout_margin="10dp"
-            android:elevation="8dp"
+            android:orientation="horizontal">
 
-            >
-
-            <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
-                android:id="@+id/autotext"
-                android:enabled="false"
+            <android.support.v7.widget.CardView
+                android:id="@+id/linear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rect"
-                android:hint="Search..."
-                android:textColorHint="@color/colorSub"
-                android:textSize="14dp"
-                android:textColor="@color/colorTex"
-                android:padding="15dp"
-                android:maxLines="1"
-                android:drawableRight="@drawable/search"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                android:layout_margin="10dp"
                 android:elevation="8dp"
-                />
+
+                >
 
 
-        </android.support.v7.widget.CardView>
+
+                <tv.merabihar.app.merabihar.CustomFonts.MyTextView_Lato_Regular
+                    android:id="@+id/autotext"
+                    android:enabled="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rect"
+                    android:hint="Search..."
+                    android:textColorHint="@color/colorSub"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorTex"
+                    android:padding="15dp"
+                    android:maxLines="1"
+                    android:drawableRight="@drawable/search"
+                    android:elevation="8dp"
+                    />
+
+
+            </android.support.v7.widget.CardView>
+
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:id="@+id/youtube_search_icon"
+                android:visibility="gone"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:layout_gravity="center"
+                android:src="@drawable/youtube"/>
+
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
