influencer pgm detail screen

--- a/app/src/main/res/layout/adapter_content_lists_design.xml
+++ b/app/src/main/res/layout/adapter_content_lists_design.xml
@@ -305,10 +305,11 @@
                     >
 
                     <ImageView
-                        android:layout_width="20dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="20dp"
-                        android:src="@drawable/download"
                         android:scaleType="centerCrop"
+                        android:visibility="invisible"
+                        android:src="@drawable/download"
 
                         />
 
